--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,19 @@
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
         <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
+        <reflections.version>0.9.12</reflections.version>
         <jsr250.api.version>1.0</jsr250.api.version>
     </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
